[gd_scene load_steps=10 format=2]

[ext_resource path="res://Characters/Cat_Enemy.gd" type="Script" id=1]
[ext_resource path="res://Characters/cat.png" type="Texture" id=2]
[ext_resource path="res://Shaders/GreyColor.shader" type="Shader" id=3]
[ext_resource path="res://Sounds/enemy_death.wav" type="AudioStream" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/active = false

[sub_resource type="Animation" id=2]
resource_name = "Damaged"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 53.2279, 40.5927 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1345.14, 547.056 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 33.5186, 22.4124 )

[node name="Cat_Enemy" type="KinematicBody2D"]
position = Vector2( 966.227, 444.2 )
scale = Vector2( 0.35, 0.35 )
collision_layer = 2147483650
collision_mask = 8
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="DamagedAnimation" type="AnimationPlayer" parent="."]
anims/Damaged = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -24.5267, 21.0087 )
shape = SubResource( 3 )

[node name="PlayerNearDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="NearShape2D" type="CollisionShape2D" parent="PlayerNearDetector"]
modulate = Color( 0.0862745, 0.960784, 0.101961, 1 )
position = Vector2( -19.9318, 6.93365 )
shape = SubResource( 4 )

[node name="HitDetector" type="Area2D" parent="."]
modulate = Color( 0, 0.298039, 1, 1 )
collision_layer = 2

[node name="KillShape2D" type="CollisionShape2D" parent="HitDetector"]
position = Vector2( -29.3022, -44.567 )
shape = SubResource( 5 )

[node name="DeathAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="body_entered" from="PlayerNearDetector" to="." method="_on_PlayerNearDetector_body_entered"]
[connection signal="body_exited" from="PlayerNearDetector" to="." method="_on_PlayerNearDetector_body_exited"]
[connection signal="area_entered" from="HitDetector" to="." method="_on_HitDetector_area_entered"]
[connection signal="area_shape_entered" from="HitDetector" to="." method="_on_HitDetector_area_shape_entered"]
[connection signal="body_entered" from="HitDetector" to="." method="_on_HitDetector_body_entered"]
